--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header class="header">
         <div class="container">
         <a  class="header-logo link" href="/">
-          <p lang="en"><span class="header-logo-blue link">Web</span>Studio</p>
+          <p lang="en" class="header-logo-content"><span class="header-logo-blue link">Web</span>Studio</p>
         </a>
         <nav class="header-nav">
             <ul class="header-list list">
@@ -35,10 +35,8 @@
     </header>
     <main>
         <section class="topsection">
-            <div class="container">
             <h1 class="topsection-title">Эффективные решения для вашего бизнеса</h1>
             <button type="button" class="topsection-button">Заказать услугу</button>
-            </div>
         </section>
         <section class="features">
             <div class="container">
@@ -62,6 +60,7 @@
                 </ul>
             </section>
             <section class="wwd">
+            <div class="container">
             <h2 class="wwd-title">Чем мы занимаемся</h2>
                 <ul class="wwd-list list">
                     <li class="wwd-item"><img src="./img/box-1.jpg" alt="человека печатает1" width="370" height="294"></li>
@@ -71,6 +70,7 @@
                 </div>
             </section>
         <section class="team">
+            <div class="container">
             <h2 class="team-title">Наша команда</h2>
             <ul class="team-list list">
                 <li class="team-item">
@@ -94,6 +94,7 @@
                     <p class="team-item-text">UI Designer</p>
                 </li>
             </ul>
+            </div>
         </section>
     </main>
     <footer class="footer">
