for mentor about footer

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header class="header">
         <div class="container">
         <a  class="header-logo link" href="/">
-          <p lang="en" class="header-logo-content"><span class="header-logo-blue link">Web</span>Studio</p>
+          <p lang="en"><span class="header-logo-blue link">Web</span>Studio</p>
         </a>
         <nav class="header-nav">
             <ul class="header-list list">
@@ -98,6 +98,7 @@
         </section>
     </main>
     <footer class="footer">
+        <div class="container">
         <a class="footer-logo link" href="/">
             <p lang="en"><span class="footer-logo-blue link">Web</span>Studio</p>
         </a>
@@ -108,6 +109,7 @@
                 <li class="footer-item"><a class="footer-item-tel link" href="tel:+380961111111">+38 096 111 11 11</a></li>
             </ul>
         </address>
+        </div>
     </footer>
 </body>
 </html>
