--- a/portfolio.html
+++ b/portfolio.html
@@ -9,11 +9,15 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+        integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/styles.css" />
+
 </head>
 <body>
     <header class="header">
+        <div class="container">
         <a class="header-logo link" href="/">
             <p lang="en"><span class="header-logo-blue link">Web</span>Studio</p>
         </a>
@@ -24,11 +28,15 @@
                 <li class="header-item"> <a class="header-item-link link" href="#contacts">Контакты</a></li>
             </ul>
         </nav>
+        <div class="header-connect">
         <a href="mailto:info@devstudio.com" class="header-link link">info@devstudio.com</a>
         <a href="tel:+380961111111" class="header-tel link">+38 096 111 11 11</a>
+        </div>
+        </div>
     </header>
     <main>
         <section class="gallery">
+            <div class="container">
             <h2 class="visually-hidden">Галерея</h2>
             <ul class="gallery-buttons-list list">
                 <li class="gallery-buttons-item"> <button type="button" class="gallery-buttons-link link current-button" href="">Все</button></li>
@@ -84,19 +92,25 @@
                     <p class="gallery-item-text">Приложение</p>
                 </li>
             </ul>
+            </div>
         </section>
     </main>
     <footer class="footer">
+        <div class="container">
             <a class="footer-logo link" href="/">
                 <p lang="en"><span class="footer-logo-blue link">Web</span>Studio</p>
             </a>
-        <address class="footer-address" id="contacts">
-            <ul class="footer-list list">
-                <li class="footer-item"><a class="footer-item-address link" href="https://goo.gl/maps/YJ5V9x83WiAXV78t8" target="_blank" rel="noopener nofollow noreferrer">г. Киев, пр-т Леси Украинки, 26</a></li>
-                <li class="footer-item"><a class="footer-item-mail link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li class="footer-item"><a class="footer-item-tel link" href="tel:+380961111111">+38 096 111 11 11</a></li>
-            </ul>
-        </address>
+            <address class="footer-address" id="contacts">
+                <ul class="footer-list list">
+                    <li class="footer-item"><a class="footer-item-address link" href="https://goo.gl/maps/YJ5V9x83WiAXV78t8"
+                            target="_blank" rel="noopener nofollow noreferrer">г. Киев, пр-т Леси Украинки, 26</a></li>
+                    <li class="footer-item"><a class="footer-item-mail link"
+                            href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                    <li class="footer-item"><a class="footer-item-tel link" href="tel:+380961111111">+38 096 111 11 11</a>
+                    </li>
+                </ul>
+            </address>
+        </div>
     </footer>
 </body>
 </html>
