ready for check

--- a/index.html
+++ b/index.html
@@ -35,8 +35,10 @@
     </header>
     <main>
         <section class="topsection">
+            <div class="container top">
             <h1 class="topsection-title">Эффективные решения для вашего бизнеса</h1>
             <button type="button" class="topsection-button">Заказать услугу</button>
+            </div>
         </section>
         <section class="features">
             <div class="container">
