--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
     </header>
     <main>
         <section class="topsection">
-            <div class="container top">
+            <div class="container top-inside">
             <h1 class="topsection-title">Эффективные решения для вашего бизнеса</h1>
             <button type="button" class="topsection-button">Заказать услугу</button>
             </div>
         </section>
         <section class="features">
-            <div class="container">
+            <div class="container features-inside">
                 <ul class="features-list list">
                     <li class="features-item">
                         <h3 class="features-item-title">Внимание к деталям</h3>
@@ -62,7 +62,7 @@
                 </ul>
             </section>
             <section class="wwd">
-            <div class="container">
+            <div class="container wwd-inside">
             <h2 class="wwd-title">Чем мы занимаемся</h2>
                 <ul class="wwd-list list">
                     <li class="wwd-item"><img src="./img/box-1.jpg" alt="человека печатает1" width="370" height="294"></li>
@@ -72,35 +72,43 @@
                 </div>
             </section>
         <section class="team">
-            <div class="container">
+            <div class="container team-inside">
             <h2 class="team-title">Наша команда</h2>
             <ul class="team-list list">
                 <li class="team-item">
                     <img src="./img/img-1.jpg" alt="член команды1" width="270" height="260">
+                    <div class="team-who">
                     <h3 class="team-item-title">Игорь Демьяненко</h3>
                     <p class="team-item-text">Product Designer</p>
+                    </div>
                 </li>
                 <li class="team-item">
                     <img src="./img/img-2.jpg" alt="член команды2" width="270" height="260">
+                    <div class="team-who">
                     <h3 class="team-item-title">Ольга Репина</h3>
                     <p class="team-item-text">Frontend Developer</p>
+                    </div>
                 </li>
                 <li class="team-item">
                     <img src="./img/img-3.jpg" alt="член команды3" width="270" height="260">
+                    <div class="team-who">
                     <h3 class="team-item-title">Николай Тарасов</h3>
                     <p class="team-item-text">Marketing</p>
+                    </div>
                 </li>
                 <li class="team-item">
                     <img src="./img/img-4.jpg" alt="член команды4" width="270" height="260">
+                    <div class="team-who">
                     <h3 class="team-item-title">Михаил Ермаков</h3>
                     <p class="team-item-text">UI Designer</p>
+                    </div>
                 </li>
             </ul>
             </div>
         </section>
     </main>
     <footer class="footer">
-        <div class="container">
+        <div class="container footer-inside">
         <a class="footer-logo link" href="/">
             <p lang="en"><span class="footer-logo-blue link">Web</span>Studio</p>
         </a>
