--- a/portfolio.html
+++ b/portfolio.html
@@ -36,7 +36,7 @@
     </header>
     <main>
         <section class="gallery">
-            <div class="container">
+            <div class="container gallery-inside">
             <h2 class="visually-hidden">Галерея</h2>
             <ul class="gallery-buttons-list list">
                 <li class="gallery-buttons-item"> <button type="button" class="gallery-buttons-link link current-button" href="">Все</button></li>
@@ -48,55 +48,73 @@
             <ul class="gallery-list list">
                 <li class="gallery-item">
                     <img src="./img/gal1.jpg" alt="example1" width="370" height="294">
+                    <div class="gallery-text">
                     <h3 class="gallery-item-title">Технокряк</h3>
                     <p class="gallery-item-text">Веб-сайт</p>
+                    </div>
                 </li>
                 <li class="gallery-item">
                     <img src="./img/gal2.jpg" alt="example2" width="370" height="294">
+                    <div class="gallery-text">
                     <h3 class="gallery-item-title">Постер New Orlean vs Golden Star</h3>
                     <p class="gallery-item-text">Дизайн</p>
+                    </div>
                 </li>
                 <li class="gallery-item">
                     <img src="./img/gal3.jpg" alt="example3" width="370" height="294">
+                    <div class="gallery-text">
                     <h3 class="gallery-item-title">Ресторан Seafood</h3>
                     <p class="gallery-item-text">Приложение</p>
+                    </div>
                 </li>
                 <li class="gallery-item">
                     <img src="./img/gal4.jpg" alt="example4" width="370" height="294">
+                    <div class="gallery-text">
                     <h3 class="gallery-item-title">Проект Prime</h3>
                     <p class="gallery-item-text">Маркетинг</p>
+                    </div>
                 </li>
                 <li class="gallery-item">
                     <img src="./img/gal5.jpg" alt="example5" width="370" height="294">
+                    <div class="gallery-text">
                     <h3 class="gallery-item-title">Проект Boxes</h3>
                     <p class="gallery-item-text">Приложение</p>
+                    </div>
                 </li>
                 <li class="gallery-item">
                     <img src="./img/gal6.jpg" alt="example6" width="370" height="294">
+                    <div class="gallery-text">
                     <h3 lang="en" class="gallery-item-title">Inspiration has no Borders</h3>
                     <p class="gallery-item-text">Веб-сайт</p>
+                    </div>
                 </li>
                 <li class="gallery-item">
                     <img src="./img/gal7.jpg" alt="example7" width="370" height="294">
+                    <div class="gallery-text">
                     <h3 class="gallery-item-title">Издание Limited Edition</h3>
                     <p class="gallery-item-text">Дизайн</p>
+                    </div>
                 </li>
                 <li class="gallery-item">
                     <img src="./img/gal8.jpg" alt="example8" width="370" height="294">
+                    <div class="gallery-text">
                     <h3 class="gallery-item-title">Проект LAB</h3>
                     <p class="gallery-item-text">Маркетинг</p>
+                    </div>
                 </li>
                 <li class="gallery-item">
                     <img src="./img/gal9.jpg" alt="example9" width="370" height="294">
+                    <div class="gallery-text">
                     <h3 lang="en" class="gallery-item-title">Growing Business</h3>
                     <p class="gallery-item-text">Приложение</p>
+                    </div>
                 </li>
             </ul>
             </div>
         </section>
     </main>
     <footer class="footer">
-        <div class="container">
+        <div class="container footer-inside">
                         <a class="footer-logo link" href="/">
                 <p lang="en"><span class="footer-logo-blue link">Web</span>Studio</p>
             </a>
