hw3 fixed paddings

--- a/portfolio.html
+++ b/portfolio.html
@@ -36,7 +36,7 @@
     </header>
     <main>
         <section class="gallery">
-            <div class="container gallery-inside">
+            <div class="container">
             <h2 class="visually-hidden">Галерея</h2>
             <ul class="gallery-buttons-list list">
                 <li class="gallery-buttons-item"> <button type="button" class="gallery-buttons-link link current-button" href="">Все</button></li>
