--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
     </header>
     <main>
         <section class="topsection">
-            <div class="container top-inside">
-            <h1 class="topsection-title">Эффективные решения для вашего бизнеса</h1>
+            <div class="container">
+            <h1 class="topsection-title">Эффективные решения <br> для вашего бизнеса</h1>
             <button type="button" class="topsection-button">Заказать услугу</button>
             </div>
         </section>
@@ -62,7 +62,7 @@
                 </ul>
             </section>
             <section class="wwd">
-            <div class="container wwd-inside">
+            <div class="container">
             <h2 class="wwd-title">Чем мы занимаемся</h2>
                 <ul class="wwd-list list">
                     <li class="wwd-item"><img src="./img/box-1.jpg" alt="человека печатает1" width="370" height="294"></li>
@@ -72,7 +72,7 @@
                 </div>
             </section>
         <section class="team">
-            <div class="container team-inside">
+            <div class="container">
             <h2 class="team-title">Наша команда</h2>
             <ul class="team-list list">
                 <li class="team-item">
@@ -108,7 +108,7 @@
         </section>
     </main>
     <footer class="footer">
-        <div class="container footer-inside">
+        <div class="container">
         <a class="footer-logo link" href="/">
             <p lang="en"><span class="footer-logo-blue link">Web</span>Studio</p>
         </a>
